# esp32-wifi-max6675-rs

./: .enter.sh  .gitignore  Cargo.toml  README.rst
.cargo/: config.toml
src/: main.rs
