[package]
name = "thermocouple-rs"
version = "0.1.0"
authors = ["franckinux <contact@franck-barbenoire.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
panic-halt = "0.2.0"
embedded-io = "0.4.0"
heapless = { version = "0.7.16", default-features = false }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
esp32c3-hal = { version = "0.14.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32c3"] }

embedded-svc = { version = "0.26.4", default-features = false }
esp-wifi = { version = "0.2.0", default-features = false, features = ["esp32c3", "wifi", "utils", "tcp", "dhcpv4"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "proto-dns", "socket-tcp", "socket-icmp", "socket-udp", "socket-dns", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
